--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="codemirror/lib/codemirror.js"></script>
         <link rel="stylesheet" href="codemirror/lib/codemirror.css">
         <link rel="stylesheet" href="codemirror/theme/cobalt.css">
+        <link rel="stylesheet" href="codemirror/addon/fold/foldgutter.css">
+        <link rel="stylesheet" href="style.css">
+
+        <script src="codemirror/lib/codemirror.js"></script>
         <script src="codemirror/mode/clike/clike.js"></script>
         <script src="codemirror/mode/javascript/javascript.js"></script>
         <script src="codemirror/keymap/sublime.js"></script>
         <script src="codemirror/addon/fold/brace-fold.js"></script>
         <script src="codemirror/addon/fold/foldcode.js"></script>
         <script src="codemirror/addon/fold/foldgutter.js"></script>
-        
-        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
