new designed mockup ready for implementation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     </head>
 
     <body>
-        <div id="container"></div>
+        <div id="topbar">
+            <div id="logopane"></div>
+            <!-- <p id="logopane">Cyclone IDE</p> -->
+            <div id="actionpane"></div>
+        </div>
+        <div id="middlebar">
+            <div id="fileexplorer"></div>
+            <div id="container"></div>
+        </div>
     </body>
 
     <script src="editor.js"></script>
