--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="codemirror/theme/twilight.css">
         <link rel="stylesheet" href="codemirror/theme/darcula.css">
         <link rel="stylesheet" href="codemirror/theme/eclipse.css">
-        <link rel="stylesheet" href="codemirror/theme/idea.css">
+        <link rel="stylesheet" href="codemirror/theme/monokai.css">
         <link rel="stylesheet" href="codemirror/addon/fold/foldgutter.css">
         <link rel="stylesheet" href="xterm/css/xterm.css" />
         <link rel="stylesheet" href="style.css">
@@ -25,30 +25,37 @@
         <div id="wrapper">
             <div id="navbar">
                 <div id="logopane">
-                    <p id="logo-text" style="color: white;">Cyclone IDE_</p>
+                    <p id="logo-text">Cyclone IDE_</p>
                 </div>
                 <div id="actionpane">
-                    <button class="action-btn" id="btn-download">Download</button>
                     <button class="action-btn" id="btn-run">Run</button>
                     <button class="action-btn" id="btn-stop">Stop</button>
+                    <button class="action-btn" id="btn-download">Download</button>
 
                     <select class="action-selector" id="font-size-selector">
                         <option value="tiny">12px</option>
-                        <option value="small" selected>14px</option>
-                        <option value="medium">16px</option>
+                        <option value="small">14px</option>
+                        <option value="medium" selected>16px</option>
                         <option value="large">18px</option>
                         <option value="super">22px</option>
+                    </select>
+
+                    <select class="action-selector" id="font-selector">
+                        <option value="Arial">Arial</option>
+                        <option value="Tahoma">Tahoma</option>
+                        <option value="Courier" selected>Courier</option>
+                        <option value="Monaco">Monaco</option>
                     </select>
 
                     <select class="action-selector" id="theme-selector">
                         <optgroup label="Light">
                             <option value="eclipse">eclipse</option>
-                            <option value="idea">idea</option>
+                            <option value="solarized">solarized</option>
                         </optgroup>
 
                         <optgroup label="Dark">
-                            <option value="solarized">solarized</option>
-                            <option value="twilight" selected>twilight</option>
+                            <option value="monokai" selected>monokai</option>
+                            <option value="twilight">twilight</option>
                             <option value="darcula">darcula</option>
                         </optgroup>
                     </select>
@@ -65,8 +72,17 @@
                 </div>
             </div>
 
+
+
             <div id="core">
-                <div id="fileexplorer"></div>
+                <div id="fileexplorer-wrapper">
+                    <div id="fileexplorer-actionpane">
+                        <div>add</div>
+                        <div>delete</div>
+                    </div>
+                    <div id="fileexplorer-core"></div>
+                </div>
+                
                 <div id="container">
                     <div id="editor"></div>
                     <div id="terminal"></div>
