run button implemented

--- a/public/index.html
+++ b/public/index.html
@@ -77,8 +77,8 @@
             <div id="core">
                 <div id="fileexplorer-wrapper">
                     <div id="fileexplorer-actionpane">
-                        <div>add</div>
-                        <div>delete</div>
+                        <div>Add Folder</div>
+                        <div>Add File</div>
                     </div>
                     <div id="fileexplorer-core"></div>
                 </div>
@@ -94,8 +94,7 @@
     </body>
 
     <script src="editor.js"></script>
-
-    <!-- <script src="terminal.js"></script> -->
+    <script src="terminal.js"></script>
 </html>
 
 
