--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
                     <p id="logo-text">Cyclone IDE_</p>
                 </div>
                 <div id="actionpane">
-                    <button class="action-btn" id="btn-run">Run</button>
-                    
+                    <button class="action-btn" id="btn-run">Run<span id="runicon"> ►</span></button>
+
                  <!--    <button class="action-btn" id="btn-stop">Stop</button>
                     <button class="action-btn" id="btn-download">Download</button>
  -->
@@ -78,8 +78,8 @@
             <div id="core">
                 <div id="fileexplorer-wrapper">
                     <div id="fileexplorer-actionpane">
-                        <div>Add Folder</div>
-                        <div>Add File</div>
+                   <!--      <div>Add Folder</div>
+                        <div>Add File</div> -->
                     </div>
                     <div id="fileexplorer-core"></div>
                 </div>
