readme file updated

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div id="wrapper">
             <div id="navbar">
                 <div id="logopane">
-                    <p id="logo-text">Cyclone IDE_</p>
+                    <p id="logo-text">CycloneR</p>
                 </div>
                 <div id="actionpane">
                     <button class="action-btn" id="btn-run">Run<span id="runicon"> ►</span></button>
