run stop button working now

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,10 @@
                     <p id="logo-text">CycloneR</p>
                 </div>
                 <div id="actionpane">
-                    <button class="action-btn" id="btn-run">Run<span id="runicon"> ►</span></button>
+                    <button class="action-btn" id="btn-run"><span id="runicon">►</span></button>
+                    <button class="action-btn" id="btn-stop"><span id="stopicon">●</span></button>
+                    <!-- <button class="action-btn" id="btn-download">Download</button> -->
 
-                 <!--    <button class="action-btn" id="btn-stop">Stop</button>
-                    <button class="action-btn" id="btn-download">Download</button>
- -->
                     <select class="action-selector" id="font-size-selector">
                         <option value="tiny">12px</option>
                         <option value="small">14px</option>
