--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,7 @@
                 </div>
                 <div id="actionpane">
                     <button class="action-btn" id="btn-run"><span id="runicon">►</span></button>
-                    <button class="action-btn" id="btn-stop"><span id="stopicon">●</span></button>
-                    <!-- <button class="action-btn" id="btn-download">Download</button> -->
+                    <button class="action-btn" id="btn-stop"><span id="stopicon">▇</span></button>
 
                     <select class="action-selector" id="font-size-selector">
                         <option value="tiny">12px</option>
@@ -60,16 +59,6 @@
 
 
                 </div>
-
-          <!--       <div id="accountpane">
-                    <h3 style="margin: auto; margin-right: 20px; color: white;">John Doe</h3>
-                    <div style="border-radius: 100px; 
-                                width: 40px; 
-                                height: 40px;
-                                margin-right: 10px;">  
-                        <img style="height:100%; width:100%" src="media/user.png">  
-                    </div>
-                </div> -->
             </div>
 
 
@@ -77,8 +66,6 @@
             <div id="core">
                 <div id="fileexplorer-wrapper">
                     <div id="fileexplorer-actionpane">
-                   <!--      <div>Add Folder</div>
-                        <div>Add File</div> -->
                     </div>
                     <div id="fileexplorer-core"></div>
                 </div>
