ui color scheme changed

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
         <div id="wrapper">
             <div id="navbar">
                 <div id="logopane">
-                    <p id="logo-text">CycloneR</p>
+                    <img id="logo" src="media/logo.png" alt="logo">
+                    <p id="logo-text">Cyclone</p>
                 </div>
                 <div id="actionpane">
                     <button class="action-btn" id="btn-run"><span id="runicon">►</span></button>
