ui theme updated

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <div id="wrapper">
             <div id="navbar">
                 <div id="logopane">
-                    <img id="logo" src="media/logo.png" alt="logo">
+                    <img id="logo" src="media/logo.png" width="36px" height="36px" alt="logo">
                     <p id="logo-text">Cyclone</p>
                 </div>
                 <div id="actionpane">
@@ -65,11 +65,11 @@
 
 
             <div id="core">
-                <div id="fileexplorer-wrapper">
+   <!--              <div id="fileexplorer-wrapper">
                     <div id="fileexplorer-actionpane">
                     </div>
                     <div id="fileexplorer-core"></div>
-                </div>
+                </div> -->
                 
                 <div id="container">
                     <div id="editor"></div>
