Timestamp added. Code refactored

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
                     <p id="logo-text">Cyclone</p>
                 </div>
                 <div id="actionpane">
-                    <button class="action-btn" id="btn-save"><span id="saveicon">⇧</span></button>
                     <button class="action-btn" id="btn-run"><span id="runicon">►</span></button>
                     <button class="action-btn" id="btn-stop"><span id="stopicon">▇</span></button>
+                    <button class="action-btn" id="btn-save"><span id="saveicon">⇧</span></button>
 
                     <select class="action-selector" id="font-size-selector">
                         <option value="tiny">12px</option>
@@ -67,6 +67,9 @@
                             <option value="seti">Seti</option>
                         </optgroup>
                     </select>
+
+                    <button class="action-btn" id="btn-collapse"><span id="collapseicon">≡</span></button>
+
                 </div>
             </div>
 
