link to website added. ui & icons changes

--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
             <div id="navbar">
                 <div id="logopane">
                     <img id="logo" src="media/logo.png" width="36px" height="36px" alt="logo">
-                    <p id="logo-text">Cyclone</p>
+                    <a id="logo-text" href="https://classicwuhao.github.io/cyclone_tutorial/tutorial-content.html" target="new">Cyclone</a>
                 </div>
                 <div id="actionpane">
-                    <button class="action-btn" id="btn-stop"><span id="stopicon">▇</span></button>
-                    <button class="action-btn" id="btn-run"><span id="runicon">►</span></button>
+                    <button class="action-btn" id="btn-stop"><span id="stopicon">⤬</span></button>
+                    <button class="action-btn" id="btn-run"><span id="runicon">▶</span></button>
                     <button class="action-btn" id="btn-trace" disabled><span id="traceicon">⇄</span></button>
                     <button class="action-btn" id="btn-save"><span id="saveicon">⇧</span></button>
 
